# msbignum

./: CMakeLists.txt  README.md  README.txt
include/msbignum/: arithmetic.h  base.h  cmp.h  strconv.h  types.h
src/: arithmetic.c  base.c  chunkops.c  cmp.c  mem.c  strconv.c
src/internal/: chunkops.h  debug.h  defaults.h  mem.h
tests/: CMakeLists.txt
tests/arithmetic/: CMakeLists.txt  add_overflow.c  add_overflow_chunk.c  div_mod_sameresult_chunk.c  div_simple_chunk.c  mod_simple_chunk.c  mul_overflow.c  mul_overflow_chunk.c
tests/cmp/: CMakeLists.txt  cmp_simple.c  iszero_simple.c  simple.c
tests/strconv/: setstr_simple.c  tostr_bufsize.c  tostr_simple.c
